--- a/Translation/general.json
+++ b/Translation/general.json
@@ -484,5 +484,23 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+    "general.distanceunit":{
+        "en":"Yard",
+        "fr":"Mètre",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
