--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -70,5 +70,59 @@
         "pl":"",
         "th":"",
         "id":"Level yg dibutuhkan"
+    },
+    "tooltip.skill.passive":{
+        "en":"Passive",
+        "fr":"Passif",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "tooltip.skill.cooldown":{
+        "en":"{0} sec cooldown",
+        "fr":"{0} sec de recharge",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "tooltip.skill.instant":{
+        "en":"Instant",
+        "fr":"Instantané",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
