--- a/Translation/general.json
+++ b/Translation/general.json
@@ -478,7 +478,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Không tốn tiền",
         "ar":"",
         "it":"",
         "pl":"",
@@ -496,7 +496,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thước",
         "ar":"",
         "it":"",
         "pl":"",
@@ -514,7 +514,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"giây",
         "ar":"",
         "it":"",
         "pl":"",
@@ -532,7 +532,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"s",
         "ar":"",
         "it":"",
         "pl":"",
@@ -550,7 +550,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Phút",
         "ar":"",
         "it":"",
         "pl":"",
@@ -568,7 +568,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Phút",
         "ar":"",
         "it":"",
         "pl":"",
