--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -2026,7 +2026,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Kỹ năng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2044,7 +2044,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Kỹ năng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2062,7 +2062,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thiên phú",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2080,7 +2080,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Kỹ năng thiên phú",
         "ar":"",
         "it":"",
         "pl":"",
