--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -118,7 +118,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Chủ động",
+        "vi":"Lập tức",
         "ar":"",
         "it":"",
         "pl":"",
