--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -2021,7 +2021,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Навыки",
         "tr":"",
         "de":"",
         "jp":"",
@@ -2039,7 +2039,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Навык",
         "tr":"",
         "de":"",
         "jp":"",
@@ -2057,7 +2057,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Талант",
         "tr":"",
         "de":"",
         "jp":"",
@@ -2075,7 +2075,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Навыки Талантов",
         "tr":"",
         "de":"",
         "jp":"",
