--- a/Translation/general.json
+++ b/Translation/general.json
@@ -455,7 +455,7 @@
         "es":"Comprar",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Купить",
         "tr":"",
         "de":"",
         "jp":"",
@@ -473,7 +473,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Бесплатно",
         "tr":"",
         "de":"",
         "jp":"",
@@ -491,7 +491,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Ярд",
         "tr":"",
         "de":"",
         "jp":"",
@@ -509,7 +509,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Секунда",
         "tr":"",
         "de":"",
         "jp":"",
@@ -527,7 +527,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Сек",
         "tr":"",
         "de":"",
         "jp":"",
@@ -545,7 +545,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Минута",
         "tr":"",
         "de":"",
         "jp":"",
@@ -563,7 +563,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Мин",
         "tr":"",
         "de":"",
         "jp":"",
