--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -77,7 +77,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Пассивный",
         "tr":"",
         "de":"",
         "jp":"",
@@ -95,7 +95,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"{0} сек перезарядка",
         "tr":"",
         "de":"",
         "jp":"",
@@ -113,7 +113,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Мгновенный",
         "tr":"",
         "de":"",
         "jp":"",
