--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -379,7 +379,7 @@
     },
     "UI.stat.ATKSPD":{
         "en":"Attack Speed",
-        "fr":"Vittesse d'attaque",
+        "fr":"Vitesse d'attaque",
         "es":"Velocidad de ataque",
         "ch":"攻击速度",
         "kr":"공격 속도",
