--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -1063,7 +1063,7 @@
     },
     "UI.windows.quest-list.done":{
         "en":"DONE",
-        "fr":"TERMIER",
+        "fr":"TERMINER",
         "es":"",
         "ch":"",
         "kr":"",
