--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -1261,7 +1261,7 @@
     },
     "UI.windows.bag.title":{
         "en":"Bag",
-        "fr":"Inventaire",
+        "fr":"Sac",
         "es":"",
         "ch":"",
         "kr":"",
