--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -1405,7 +1405,7 @@
     },
     "UI.windows.bag.capacity":{
         "en":"Bag Capacity",
-        "fr":"Capacitée",
+        "fr":"Capacité",
         "es":"",
         "ch":"",
         "kr":"",
