--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -1,39 +1,39 @@
 {
     "UI.chat.whisper_to":{
-        "en":"You say to %s",
-        "fr":"Vous dites à %s",
+        "en":"You say to {0}",
+        "fr":"Vous dites à {0}",
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"Вы говорите с %s",
+        "ru":"Вы говорите с {0}",
         "tr":"",
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Bạn nói với %s",
+        "vi":"Bạn nói với {0}",
         "ar":"",
         "it":"",
         "pl":"",
         "th":"",
-        "id":"Katakan kepadanya %s"
+        "id":"Katakan kepadanya {0}"
     },
     "UI.chat.whisper_from":{
-        "en":"%s says",
-        "fr":"%s vous dit",
+        "en":"{0} says",
+        "fr":"{0} vous dit",
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"%s говорит",
+        "ru":"{0} говорит",
         "tr":"",
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"%s nói",
+        "vi":"{0} nói",
         "ar":"",
         "it":"",
         "pl":"",
         "th":"",
-        "id":"%s seperti itu"
+        "id":"{0} seperti itu"
     },
     "UI.chat.channel.local":{
         "en":"Local",
