--- a/Translation/item.json
+++ b/Translation/item.json
@@ -1747,7 +1747,7 @@
     },
     "item.801.name":{
         "en":"Fantastic Sandals",
-        "fr":"",
+        "fr":"Sandales Fantastiques",
         "es":"",
         "ch":"",
         "kr":"",
