--- a/Translation/item.json
+++ b/Translation/item.json
@@ -2881,7 +2881,7 @@
     },
     "item.10001.name":{
         "en":"Yellow Celebeam Powder",
-        "fr":"",
+        "fr":"Poudre de Celebeam Jaune",
         "es":"",
         "ch":"",
         "kr":"",
@@ -2899,7 +2899,7 @@
     },
     "item.10002.name":{
         "en":"Red Celebeam Powder",
-        "fr":"",
+        "fr":"Poudre de Celebeam Rouge",
         "es":"",
         "ch":"",
         "kr":"",
@@ -2917,7 +2917,7 @@
     },
     "item.10003.name":{
         "en":"Blue Celebeam Powder",
-        "fr":"",
+        "fr":"Poudre de Celebeam Bleu",
         "es":"",
         "ch":"",
         "kr":"",
@@ -2935,7 +2935,7 @@
     },
     "item.10004.name":{
         "en":"Cracked Yellow Celebeam",
-        "fr":"",
+        "fr":"Celebeam Jaune Fissuré",
         "es":"",
         "ch":"",
         "kr":"",
@@ -2953,7 +2953,7 @@
     },
     "item.10005.name":{
         "en":"Cracked Red Celebeam",
-        "fr":"",
+        "fr":"Celebeam Rouge Fissuré",
         "es":"",
         "ch":"",
         "kr":"",
@@ -2971,7 +2971,7 @@
     },
     "item.10006.name":{
         "en":"Cracked Blue Celebeam",
-        "fr":"",
+        "fr":"Celebeam Bleu Fissuré",
         "es":"",
         "ch":"",
         "kr":"",
@@ -2989,7 +2989,7 @@
     },
     "item.10007.name":{
         "en":"Crude Yellow Celebeam",
-        "fr":"",
+        "fr":"Celebeam Jaune Brut",
         "es":"",
         "ch":"",
         "kr":"",
@@ -3007,7 +3007,7 @@
     },
     "item.10008.name":{
         "en":"Crude Red Celebeam",
-        "fr":"",
+        "fr":"Celebeam Rouge Brut",
         "es":"",
         "ch":"",
         "kr":"",
@@ -3025,7 +3025,7 @@
     },
     "item.10009.name":{
         "en":"Crude Blue Celebeam",
-        "fr":"",
+        "fr":"Celebeam Bleu Brut",
         "es":"",
         "ch":"",
         "kr":"",
@@ -3043,7 +3043,7 @@
     },
     "item.10010.name":{
         "en":"Yellow Celebeam",
-        "fr":"",
+        "fr":"Celebeam Jaune",
         "es":"",
         "ch":"",
         "kr":"",
@@ -3061,7 +3061,7 @@
     },
     "item.10011.name":{
         "en":"Red Celebeam",
-        "fr":"",
+        "fr":"Celebeam Rouge",
         "es":"",
         "ch":"",
         "kr":"",
@@ -3079,7 +3079,7 @@
     },
     "item.10012.name":{
         "en":"Blue Celebeam",
-        "fr":"",
+        "fr":"Celebeam Bleu",
         "es":"",
         "ch":"",
         "kr":"",
@@ -3097,7 +3097,7 @@
     },
     "item.10013.name":{
         "en":"Perfect Yellow Celebeam",
-        "fr":"",
+        "fr":"Celebeam Jaune Parfaite",
         "es":"",
         "ch":"",
         "kr":"",
@@ -3115,7 +3115,7 @@
     },
     "item.10014.name":{
         "en":"Perfect Red Celebeam",
-        "fr":"",
+        "fr":"Celebeam Rouge Parfaite",
         "es":"",
         "ch":"",
         "kr":"",
@@ -3133,7 +3133,7 @@
     },
     "item.10015.name":{
         "en":"Perfect Blue Celebeam",
-        "fr":"",
+        "fr":"Celebeam Bleu Parfaite",
         "es":"",
         "ch":"",
         "kr":"",
@@ -3151,7 +3151,7 @@
     },
     "item.10016.name":{
         "en":"Glittery Yellow Celebeam",
-        "fr":"",
+        "fr":"Celebeam Jaune Scintillante",
         "es":"",
         "ch":"",
         "kr":"",
@@ -3169,7 +3169,7 @@
     },
     "item.10017.name":{
         "en":"Glittery Red Celebeam",
-        "fr":"",
+        "fr":"Celebeam Rouge Scintillante",
         "es":"",
         "ch":"",
         "kr":"",
@@ -3187,7 +3187,7 @@
     },
     "item.10018.name":{
         "en":"Glittery Blue Celebeam",
-        "fr":"",
+        "fr":"Celebeam Bleu Scintillante",
         "es":"",
         "ch":"",
         "kr":"",
@@ -3205,7 +3205,7 @@
     },
     "item.10019.name":{
         "en":"Glorious Yellow Celebeam",
-        "fr":"",
+        "fr":"Celebeam Jaune Glorieuse",
         "es":"",
         "ch":"",
         "kr":"",
@@ -3223,7 +3223,7 @@
     },
     "item.10020.name":{
         "en":"Glorious Red Celebeam",
-        "fr":"",
+        "fr":"Celebeam Rouge Glorieuse",
         "es":"",
         "ch":"",
         "kr":"",
@@ -3241,7 +3241,7 @@
     },
     "item.10021.name":{
         "en":"Glorious Blue Celebeam",
-        "fr":"",
+        "fr":"Celebeam Bleu Glorieuse",
         "es":"",
         "ch":"",
         "kr":"",
@@ -3259,7 +3259,7 @@
     },
     "item.10022.name":{
         "en":"Dazzling Yellow Celebeam",
-        "fr":"",
+        "fr":"Celebeam Jaune Éblouissante",
         "es":"",
         "ch":"",
         "kr":"",
@@ -3277,7 +3277,7 @@
     },
     "item.10023.name":{
         "en":"Dazzling Red Celebeam",
-        "fr":"",
+        "fr":"Celebeam Rouge Éblouissante",
         "es":"",
         "ch":"",
         "kr":"",
@@ -3295,7 +3295,7 @@
     },
     "item.10024.name":{
         "en":"Dazzling Blue Celebeam",
-        "fr":"",
+        "fr":"Celebeam Bleu Éblouissante",
         "es":"",
         "ch":"",
         "kr":"",
@@ -3313,7 +3313,7 @@
     },
     "item.10025.name":{
         "en":"Ultimate Yellow Celebeam",
-        "fr":"",
+        "fr":"Celebeam Jaune Ultime",
         "es":"",
         "ch":"",
         "kr":"",
@@ -3331,7 +3331,7 @@
     },
     "item.10026.name":{
         "en":"Ultimate Red Celebeam",
-        "fr":"",
+        "fr":"Celebeam Rouge Ultime",
         "es":"",
         "ch":"",
         "kr":"",
@@ -3349,7 +3349,7 @@
     },
     "item.10027.name":{
         "en":"Ultimate Blue Celebeam",
-        "fr":"",
+        "fr":"Celebeam Bleu Ultime",
         "es":"",
         "ch":"",
         "kr":"",
@@ -3367,7 +3367,7 @@
     },
     "item.10028.name":{
         "en":"Yellow Topaz",
-        "fr":"",
+        "fr":"Topaz Jaune",
         "es":"",
         "ch":"",
         "kr":"",
@@ -3385,7 +3385,7 @@
     },
     "item.10029.name":{
         "en":"Red Topaz",
-        "fr":"",
+        "fr":"Topaz Rouge",
         "es":"",
         "ch":"",
         "kr":"",
@@ -3403,7 +3403,7 @@
     },
     "item.10030.name":{
         "en":"Blue Topaz",
-        "fr":"",
+        "fr":"Topaz Bleu",
         "es":"",
         "ch":"",
         "kr":"",
